VeraSandBox2016/src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Incident__c</fullName>
        <label>Date/Time of Incident</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_of_Incident__c</fullName>
        <label>Description of Incident</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Location_City__c</fullName>
        <label>Incident Location - City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Location_Country__c</fullName>
        <label>Incident Location - Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incident</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Names_and_Contact_of_People_Involved__c</fullName>
        <label>Names and Contact of People Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Contact__c</fullName>
        <label>Other Contact</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Mobile_Telephone__c</fullName>
        <label>Other Mobile Telephone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Incident__c</fullName>
        <label>Type of Incident</label>
        <picklist>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidnapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INC-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Training_or_Mission_if_not_Admin</fullName>
        <active>true</active>
        <description>Incident must be related to a Training OR a Mission if it&apos;s not an Admin incident</description>
        <errorConditionFormula>OR(
AND(
ISPICKVAL( Department__c , &apos;T&apos;),  
AND(
ISBLANK( Mission__c ),  ISBLANK(Training__c) 
)
)
,
AND(
ISPICKVAL( Department__c , &apos;M&apos;),  
AND(ISBLANK( Mission__c ),  ISBLANK(Training__c)
)
)
)</errorConditionFormula>
        <errorDisplayField>Department__c</errorDisplayField>
        <errorMessage>If Department is not Admin, please relate this Incident to either a Mission or a Training</errorMessage>
    </validationRules>
</CustomObject>